Added Haskell and Conclusion sections

--- a/main.tex
+++ b/main.tex
@@ -1387,17 +1387,23 @@ the original order in the merged script.
 \end{thm}
   The theorem holds also with respect to the edits contained in \texttt{e₂}.
 
+\section{Haskell}
+\label{sec:haskell}
+
 \section{Discussion and Related Work}
 \label{sec:related-work}
 
-\appendix
-\section{Appendix Title}
+\section{Conclusion}
+\label{sec:conclusion}
 
-This is the text of the appendix, if you need one.
+% \appendix
+% \section{Appendix Title}
 
-\acks
+% This is the text of the appendix, if you need one.
 
-Acknowledgments, if needed.
+% \acks
+
+% Acknowledgments, if needed.
 
 % We recommend abbrvnat bibliography style.
 
