--- a/svc.bib
+++ b/svc.bib
@@ -1078,3 +1078,40 @@ keywords = "constructive type theory "
  publisher = {ACM},
  address = {New York, NY, USA},
 } 
+
+@inproceedings{HomoPatchTheory,
+ author = {Angiuli, Carlo and Morehouse, Edward and Licata, Daniel R. and Harper, Robert},
+ title = {Homotopical Patch Theory},
+ booktitle = {Proceedings of the 19th ACM SIGPLAN International Conference on Functional Programming},
+ series = {ICFP '14},
+ year = {2014},
+ isbn = {978-1-4503-2873-9},
+ location = {Gothenburg, Sweden},
+ pages = {243--256},
+ numpages = {14},
+ url = {http://doi.acm.org/10.1145/2628136.2628158},
+ doi = {10.1145/2628136.2628158},
+ acmid = {2628158},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {languages, theory},
+}
+
+@article{CategoryPatchTheory,
+ author = {Mimram, Samuel and Di Giusto, Cinzia},
+ title = {A Categorical Theory of Patches},
+ journal = {Electron. Notes Theor. Comput. Sci.},
+ issue_date = {November, 2013},
+ volume = {298},
+ month = nov,
+ year = {2013},
+ issn = {1571-0661},
+ pages = {283--307},
+ numpages = {25},
+ url = {http://dx.doi.org/10.1016/j.entcs.2013.09.018},
+ doi = {10.1016/j.entcs.2013.09.018},
+ acmid = {2561614},
+ publisher = {Elsevier Science Publishers B. V.},
+ address = {Amsterdam, The Netherlands, The Netherlands},
+ keywords = {Category theory, coinitial patch, patch},
+} 
