--- a/main.tex
+++ b/main.tex
@@ -358,7 +358,7 @@ hsplit : HList (as ++ bs) → HList as × HList bs
 	the absence of a node.
         At first we might try to define them as a maybe value:
 \begin{minted}{agda}
-Val : List Set -> Set -> Set
+Val : List Set → Set → Set
 Val as a = Maybe (F as a)
 \end{minted}
         In the type \texttt{Val as a} the parameters \texttt{as} and \texttt{a} 
@@ -997,9 +997,9 @@ to nodes in heterogeneous lists \texttt{α ∈ hs}.
     merged and precisely captures these circumstances.
 
 \begin{minted}{agda}
-data _⊔₃_↥_ : ES xs ys -> ES xs zs -> Conflict u v w -> Set where
-  here :  f ⊔ g ↥ c -> (f ∷ e₁) ⊔₃ (g ∷ e₂) ↥ c
-  there : e₁ ⊔₃ e₂ ↥ c -> (f ∷ e₁) ⊔₃ (g ∷ e₂) ↥ c
+data _⊔₃_↥_ : ES xs ys → ES xs zs → Conflict u v w → Set where
+  here :  f ⊔ g ↥ c → (f ∷ e₁) ⊔₃ (g ∷ e₂) ↥ c
+  there : e₁ ⊔₃ e₂ ↥ c → (f ∷ e₁) ⊔₃ (g ∷ e₂) ↥ c
 \end{minted}
 
     % In order to show that these are truly the minimal conditions to get a conflict,
@@ -1007,10 +1007,10 @@ data _⊔₃_↥_ : ES xs ys -> ES xs zs -> Conflict u v w -> Set where
     % conflict. 
 
 % \begin{minted}{agda}
-% data _∈ᶜ_ (c : Conflict u v w) : ES₃ xs -> Set where
+% data _∈ᶜ_ (c : Conflict u v w) : ES₃ xs → Set where
 %   here : c ∈ᶜ (c ∷ᶜ e)
-%   there : c ∈ᶜ e -> c ∈ᶜ f ∷ e
-%   thereᶜ : c ∈ᶜ e -> c ∈ᶜ (c' ∷ᶜ e)
+%   there : c ∈ᶜ e → c ∈ᶜ f ∷ e
+%   thereᶜ : c ∈ᶜ e → c ∈ᶜ (c' ∷ᶜ e)
 % \end{minted}
 
     The following theorem shows that a conflict occurs in a merged script
@@ -1431,7 +1431,7 @@ type, but since they may assume many values, they are all combined in
 a single constructor and the original value is retained.
 \begin{minted}{haskell}
 data IntF xs a where
-  I :: Int -> IntF '[] Int
+  I :: Int → IntF '[] Int
 \end{minted}
 
 \subsection{Diffing}
@@ -1440,11 +1440,11 @@ for types that can be diffed.
 
 \begin{minted}{haskell}
 class Typeable a => Diff a where
-  type FamilyOf a :: [ * ] -> * -> *
-  toHTree :: a -> HTree a
-  fromHTree :: HTree a -> a
-  (=?=) :: F xs a -> F ys a -> Maybe (xs :~: ys)
-  distance :: F xs a -> F ys a -> Double
+  type FamilyOf a :: [ * ] → * → *
+  toHTree :: a → HTree a
+  fromHTree :: HTree a → a
+  (=?=) :: F xs a → F ys a → Maybe (xs :~: ys)
+  distance :: F xs a → F ys a → Double
 \end{minted}
 \todo{Better name for FamilyOf. It is not per family but per type}
 The associated type family \texttt{FamilyOf a} returns the concrete
@@ -1467,10 +1467,10 @@ every child of a node.
 \begin{minted}{haskell}
 data HList xs where
   HNil :: HList []
-  HCons :: Diff a => HTree a -> HList as -> HList (a : as)
+  HCons :: Diff a => HTree a → HList as → HList (a : as)
 
 data HTree a where
-  Node :: F as a -> HList as -> HTree a
+  Node :: F as a → HList as → HTree a
 \end{minted}
 
 This definition automatically ensures that the whole family of mutually recursive 
@@ -1490,8 +1490,8 @@ of the same data type.
 We use the method \texttt{eqT} from the \texttt{Typeable} superclass
 of \texttt{Diff} for that:
 \begin{minted}{haskell}
-sameT :: (Diff a, Diff b) => F xs a -> F ys b -> Maybe (a :~: b)
-sameT _ _ = eqT
+(=??=) :: (Diff a, Diff b) => F xs a → F ys b → Maybe (a :~: b)
+_ =??= _ = eqT
 \end{minted}
 Note that the arguments are ignored and used exclusively to fix which
 types must be compared.
@@ -1544,16 +1544,20 @@ inlined in it.
 \begin{minted}{haskell}
 data ES xs ys where
   End :: ES [] []
-  Nop :: ES xs ys -> ES xs ys
-  Ins :: Diff a => F xs a -> ES ys (xs :++: zs) -> ES ys (a ': zs)
-  Del :: Diff a => F xs a -> ES (xs :++: ys) zs -> ES (a ': ys) zs
-  Upd :: Diff a => F xs a -> F ys a -> ES (xs :++: zs) (ys :++: ws) 
-      -> ES (a ': zs) (a ': ws)
+  Ins :: Diff a => F xs a → ES ys (xs :++: zs) → ES ys (a ': zs)
+  Del :: Diff a => F xs a → ES (xs :++: ys) zs → ES (a ': ys) zs
+  Upd :: Diff a => F xs a → F ys a → ES (xs :++: zs) (ys :++: ws) 
+      → ES (a ': zs) (a ': ws)
 \end{minted}
-The original version cannot be translated as it is, because of the 
-ambiguity of the type level lists prefixes, that would require
-the use of singleton types \cite{Eisenberg12DTPS}.
-Symbol \texttt{:++:} denotes type-level append.
+The original version cannot be encoded as it is in Haskell, due to the
+limitations of the datatype promotion mechanism \cite{Yorgey12} and
+the absence of pi-types.  Symbol \texttt{:++:} denotes type-level
+append.  
+%
+Since there is no separate edit data type, we do not include a
+no-operation edit in the script. 
+%
+We then discuss how we recover alignment in the implementation.
 
 \paragraph{Algorithm}
 A \texttt{diff} algorithm takes as input two objects and outputs an
@@ -1576,26 +1580,17 @@ that contain only delete, insert and copy operations.
 The original cost model is straightforward and assign cost 1 to every
 edit, hence preferring copy edits over an equivalent insert and delete.
 %
-In this paper we have generalized copy to update and we have introduced
-a \texttt{Nop} operation , therefore we have to adjust the cost model
-accordingly.
+In this paper we have generalized copy to update, therefore we have to
+adjust the cost model accordingly.
 
-\begin{minted}{agda}
-cost : ES as bs -> Dobule
-cost (Nop e) = 1 + cost e
+\begin{minted}{haskell}
+cost : ES as bs → Dobule
 cost (Del x e) = 1 + cost e
 cost (Ins y e) = 1 + cost e
 cost (Upd x y e) = distance x y + cost e 
-cost [] = 0
+cost End = 0
 \end{minted}
 
-The edit \texttt{Nop} has weight one, even though it has no
-operational effect, because it increases the length of an edit script.
-%
-In other words for any edit script that contains some \texttt{Nop} an
-equivalent script with smaller cost can be obtained by removing each
-\texttt{Nop} edit.
-%
 The function \texttt{distance} computes the cost of an update between
 constructors of the same type and it is expected to be a
 \emph{metric}.
@@ -1623,23 +1618,23 @@ data type constructors is the \emph{discrete distance}:
 
 The binary operator \texttt{\_⨅\_} selects the edit script that minimizes \texttt{cost}.
 \begin{minted}{agda}
-(⨅) : ES as bs -> ES as bs -> ES as bs
+(⨅) : ES as bs → ES as bs → ES as bs
 e₁ ⨅ e₂ = if cost e₁ ≤ cost e₂ then e₁ else e₂
 \end{minted}
 
 We show a short, yet naive, version of the \texttt{diff} algorithm for simplicity,
 furthermore we extend list syntax to heterogeneous lists for clarity:
-\begin{minted}{agda}
-diff : DList as -> DList bs -> ES as bs
+\begin{minted}{haskell}
+diff : DList as → DList bs → ES as bs
 diff [] [] = End
 diff [] (Node β ys₁ ∷ ys₂) = Ins β $ diff [] (ys₁ +++ ys₂)
 diff (Node α xs₁ ∷ xs₂) [] = Del α $ diff (xs₁ +++ xs₂) []
 diff (Node α xs₁ ∷ xs₂) (Node β ys₁ ∷ ys₂) =
   let d = Del α $ diff (xs₁ +++ xs₂) (Node β ys₁ ∷ ys₂) 
       i = Ins β $ diff (Node α xs₁ ∷ xs₂) (ys₁ +++ ys₂) in
-    case sameT α β of
-      Nothing -> d ⨅ i
-      Just Refl -> d ⨅ i ⨅ u
+    case α =??= β of
+      Nothing → d ⨅ i
+      Just Refl → d ⨅ i ⨅ u
         where u = Upd α β $ diff (xs₁ +++ xs₂) (ys₁ +++ ys₂)
 \end{minted}
 In the first case both input lists and the script is completed with
@@ -1653,18 +1648,13 @@ interesting.
 %
 Either the first node can be deleted, or the second node can be
 inserted, or, if the nodes have the same target type, checked using
-\texttt{sameT}, the first node can be updated with the second.
+\texttt{=??=}, the first node can be updated with the second.
 %
 In each case the rest of the edit script is computed recursively,
 prepending to either list the children of a node.
 %
 Lastly the script that minimizes the cost function is selected 
 using \texttt{⨅}.
-%
-Note that the \texttt{Nop} edit is never used because it does not
-consume neither of the two lists, while at the same time it worsen
-the script longer than needed.
-%
 %
 This version of the algorithm is naive because it is very inefficient,
 since it contains several recursive calls that perform the same
@@ -1675,7 +1665,7 @@ practical performance \cite{Lemp09}.
 
 We conclude with the entry point of our data type generic diff algorithm.
 \begin{minted}{haskell}
-gdiff : (Diff a, Diff b) => a -> b -> ES '[ a ] '[ b ]
+gdiff : (Diff a, Diff b) => a → b → ES '[ a ] '[ b ]
 gdiff x y = diff [ toHTree x ] [ toHTree y ] 
 \end{minted}
 The objects to be diffed are converted to the generic tree
@@ -1683,13 +1673,136 @@ representation and inserted in a singleton heterogeneous list, which
 are then compared using \texttt{diff}.
 
 \subsection{Merging}
-\paragraph{Conflict}
-Conflict data type
-\paragraph{Merged Script}
-ES3 data-type.
-\paragraph{Algorithm}
-Signature only, considerations about alignment and type checking.
+Merging consists in diffing the base version with respect to each
+new version, which produces two edit scripts that are combined
+following the three-way merge technique. The merge may fail either
+due to some conflict or because it generates an ill-typed 
+script. 
 
+\paragraph{Conflict}
+The conflict data type encodes why it is not possible two merge two edits.
+
+\begin{minted}{haskell}
+data Conflict where
+  InsIns :: (Diff a, Diff b) => F xs a → F ys b → Conflict
+  UpdDel :: Diff a => F xs a → F ys a → Conflict
+  DelUpd :: Diff a => F xs a → F ys a → Conflict
+  UpdUpd :: Diff a => F xs a → F ys a → F zs a → Conflict
+\end{minted}
+
+Its type is much simpler compared to the model because of the
+limitation in the data promotion mechanism, which prevents GADTs from
+being indexed from other GADTs, in particular it is not indexed by the
+base and new values.
+
+\paragraph{Merged Script}
+The \texttt{ES3 xs} data type represents a merged edit script, which
+may contain conflicts.
+\begin{minted}{haskell}
+data ES3 xs where
+  End3 :: ES3 '[] 
+  Cnf3 :: Conflict → ES3 xs → ES3 ys
+  Ins3 :: Diff a => F xs a → ES3 ys → ES3 ys
+  Del3 :: Diff a => F xs a → ES3 (xs :++: ys) → ES3 (a ': ys) 
+  Upd3 :: Diff a => F xs a → F ys a 
+         → ES3 (xs :++: zs) → ES3 (a ': zs) 
+\end{minted}
+The script might be ill-typed with respect to the output list,
+since nothing is enforced about the output types.
+%
+However the script is guaranteed to be well-typed with respect to the
+source list, simplifying the type checking phase, which then has to
+check the output types only.
+%
+The only exception is the constructor \texttt{Cnf3}, which does not
+retain enough type information to maintain this property.
+%
+Likely this is not an issue: a script containing a conflict
+is already ill-typed, according to the rules given in \ref{subsec:diff3-algo}.
+%
+
+\paragraph{Alignment}
+Due to the lack of proper dependent types we cannot guarantee that
+merge is called only on aligned scripts, therefore this condition is
+checked at run-time.
+%
+The following auxiliary functions checks this condition and throws an
+error otherwise.
+\begin{minted}{haskell}
+aligned :: (Diff a, Diff b) => F xs a → F ys b → (xs :~: ys , a :~: b)
+aligned a b =
+  case a =??= b of
+    Just Refl →  
+      case a =?= b of
+        Just Refl → (Refl, Refl)
+        _ → error "Scripts not aligned"
+\end{minted}
+Note that this check bears also some type equality, essential to
+make the merge algorithm type check.
+
+\paragraph{Algorithm}
+Since no alignment proof is available, the merge algorithm needs to
+check alignment every time two edits with a non-empty source value
+needs to be merged.
+As an example consider the update versus update case:
+\begin{minted}{haskell}
+merge3 :: ES xs ys → ES xs zs → ES3 xs
+merge3 (Upd o x e1) (Upd o' y e2) =
+  case aligned o o' of
+    (Refl, Refl) →
+      case (o =?= x, o' =?= y, x =?= y) of
+        (Just (Refl, Refl), _, _) → Upd3 o y (merge3 e1 e2) -- Id1
+        (_, Just (Refl, Refl), _) → Upd3 o x (merge3 e1 e2) -- Id2
+        (_, _, Just (Refl, Refl)) → Upd3 o x (merge3 e1 e2) -- Idem
+        (_, _, _) → Cnf3 (UpdUpd o x y) (merge3 e1 e2)
+\end{minted}
+Even though in the signature the two scripts share the same source list
+\texttt{xs}, the two nodes \texttt{o} and \texttt{o'} might represent
+different constructors with distinct arguments and types:
+the alignment check guarantees that this is not the case.
+%
+The merging algorithm checks then whether either the first or the
+second edit are actual copies or whether both of them update the nodes
+in the same way, leading to a merge, or otherwise to an update
+conflict.
+%
+
+\paragraph{Type Checking}
+In our implementation the type checking phase either
+yields a well-typed edit script or a list of type errors and conflicts
+of the script. We omit its implementation for brevity:
+\begin{minted}{haskell}
+tyCheck :: ES3 xs → Either [Conflict] (WES xs)
+\end{minted}
+The auxiliary data type \texttt{WES} represents a well-typed edit script 
+with source list \texttt{xs}.
+\begin{minted}{haskell}
+data WES xs where
+  WES :: ES xs ys → WES xs
+\end{minted}
+Note that we need it, because we have to existentially quantify over the output
+list \texttt{ys}.
+
+We conclude by giving the interface of a data type generic \texttt{diff3} algorithm.
+\begin{minted}{haskell}
+gdiff3 :: Diff a => a → a → a → Either [Conflict] (ES '[ a ] '[ a ])
+gdiff3 x o y = 
+  let e = merge3 (diff o x) (diff o y) in
+    case tyCheck e of 
+     Left cs → Left cs
+     Right (WES e') → hasRightTarget e'
+\end{minted}
+The new versions are diffed with the original version and their edit
+scripts merged.  
+%
+Our formal model guarantees that scripts generated from the same source 
+object are aligned, therefore we are ensured that \texttt{merge3} will not crash.
+%
+Conflicts are reported directly, while if the merged script is
+well-typed we have to check that it does in fact generate an object of the
+correct type.  The function \texttt{hasRightTarget}, omitted, takes
+care of that.
+ 
 \subsection{Example}
 Interactive session with initial example revised.
 
